--- a/.github/workflows/collect-data.yml
+++ b/.github/workflows/collect-data.yml
@@ -8,6 +8,7 @@ on:
 jobs:
   collect:
     runs-on: ubuntu-latest
+    environment: API_KEY
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
