--- a/.github/workflows/collect-data.yml
+++ b/.github/workflows/collect-data.yml
@@ -9,6 +9,7 @@ jobs:
   collect:
     runs-on: ubuntu-latest
     environment: API_KEY
+    
     steps:
       - name: Checkout repo
         uses: actions/checkout@v4
@@ -19,15 +20,43 @@ jobs:
           python-version: '3.11'
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install python-dotenv
 
       - name: Run data collection script
         env:
           API_KEY: ${{ secrets.API_KEY }}
-        run: python collect_marketplace_data.py
+        run: |
+          python collect_marketplace_data.py
+          ls -la exported_csvs/
+
+      - name: Upload CSV files as artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: healthcare-data
+          path: |
+            exported_csvs/*.csv
+            marketplace.db
+            healthcare_plans.json
+          retention-days: 5
 
       - name: Commit and push changes
         uses: stefanzweifel/git-auto-commit-action@v5
         with:
-          commit_message: "Update marketplace data"
+          commit_message: "Update marketplace data [skip ci]"
           branch: main
+          add_options: '--all'
+          file_pattern: |
+            exported_csvs/*.csv
+            marketplace.db
+            healthcare_plans.json
+      
+      - name: Upload database to artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: database-backup
+          path: marketplace.db
+          retention-days: 30
